
  - Added the three-parameter form of "adjust()" that allows to adjust to
    some other than the current position.

  - Added automatic retry of Taco calls with the new "tacotries" parameter
    of TacoDevice objects.

  - Added the "extended" entry to setup files, for future use.

  - The "waitForStatus()" utility function now supports timeout and handling
    error states.

  - The "center()" and "checkoffset()" user commands now can take an "ycol"
    keyword that determines which data column is used for fitting.

  - Added "calpos()", "pos()" and "rp()" commands for triple-axis
    spectrometers.

  - Renamed the "name" setup entry to "description" to match its function.

  - Taco motors now can read the absolute limits from the Taco device.

  - Removed "setPosition()" from abstract Axis.  Moved "setPosition()" from
    abstract Motor to abstract Coder.

  - Changed the "FRMDetector" class to have lists of monitor and counter
    channels as adevs.  Presets are either "t" or "monX" or "ctrX", where
    X is the number of the monitor/counter channel.

  - Added suggestion of possible commands when misspelled on the console.

  - The TAS commands are not included automatically in setups anymore.

  - Added "coordinates" parameter to slits to select the coordinate
    convention for right/left, bottom/top axes.

  - Removed first ("converter") argument from parameter type "oneof".

  - Added a "FinishExperiment()" user command.

  - Added "poll" and "neverpoll" parameters to the Poller object.

  - When calling "stop()" without devices, stop all devices in parallel.

**Release 2.0.1**

  - In "ImageStorage", made sure the data file isn't overwritten unless
    explicitly allowed.

  - Fixed the "steps" parameter of IPC coders.

  - Fixed nicos.conf not being read.  Prepend PYTHONPATH entries to
    sys.path instead of appending.

  - Fixed TAS wavevectors to always move in inverse angstroms.

**Release 2.0.0 (2012-01-11)**

  - Initial release.